# pathfinding

./: .gitignore  .valgrindrc  Makefile  README.md  TODO.md  meson.build
data/: ex.mtx
src/: bfs.c  bfs_shit.c  binheap.c  defs.h  graph.c  graph.h  io.c  io.h  main.c  main.h  matrix.c  matrix.h
src/bkp/: graph.c  graph.old.c  graph2.c  graph_slist.c  main_matrix.c  ppp.c
